--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-transform-define": "^2.0.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "next": "12.1.5",
+    "process": "^0.11.10",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "18.1.0"
