--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-transform-define": "^2.0.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "google-auth-library": "^8.0.2",
     "next": "12.1.5",
     "process": "^0.11.10",
     "react": "18.1.0",
